# Carbon-Footprint

./: .env.example  .gitignore  README.md  cloudbuild.yaml  cypress.config.js  docker-compose.yml  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  prettier.config.cjs  request.json  seo-report.json  skills-lock.json  storage.rules  tsconfig.base.json
.firebase/: hosting.YXBwcy93ZWIvZGlzdA.cache
.github/workflows/: ci.yml
.husky/: pre-commit
apps/web/: index.html  jest.config.ts  jest.setup.ts  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/public/: firebase-messaging-sw.js  robots.txt  sitemap.xml
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/web/src/__tests__/: AICoach.test.tsx  AccessibilityPanel.test.tsx  App.test.tsx  Calculator.test.tsx  carbon.test.ts
apps/web/src/components/: AICoach.tsx  Auth.tsx  BreakdownChart.tsx  Calculator.tsx  CarbonChart.tsx  CarbonTwin.tsx  DailyActions.tsx  ImpactMap.tsx  MetricCard.tsx
apps/web/src/data/: dashboard.ts  mock.ts
apps/web/src/features/: AccessibilityPanel.tsx  Calculator.tsx  CarbonTwin.tsx  Coach.tsx  (+2 more)
cypress/: tsconfig.json
cypress/e2e/: dashboard.cy.ts  ecotrack.cy.ts
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  GOOGLE_CLOUD.md  SECURITY.md  TESTING.md
services/api/: Dockerfile  jest.config.ts  package.json  tsconfig.json
services/api/src/: app.ts  openapi.ts  server.ts  swagger.ts
services/carbon-core/: Cargo.toml  Dockerfile
services/carbon-core/src/: main.rs
(+32 files in other folders)
