[package]
name = "ecotrack-carbon-core"
version = "1.0.0"
edition = "2021"
description = "Rust carbon calculation and AI twin simulation engine for EcoTrack AI."
license = "MIT"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
